Bug 745919 - Do not set bodyAsAttachment flag true when content type is undefined. r=dbienvenu